Changes
=======

1.2.7 (TBD)
-----------

- Fix a copy-paste bug in features.geometry_window() affecting Y-axis padding
  (#2266).
- Note upcoming deprecation of the height and width parameters of
  rasterio.windows.from_bounds() and stop using these parameters in project
  code and tests.
- The transform.xy and transform.rowcol functions now return a pair of
  single-element lists if passed a pair of single-element lists. This was the
  original behavior, but was broken in version 1.2.1 (#2242).

1.2.6 (2021-06-22)
------------------

- Replace the defective 1.2.5 sdist, which had breakpoint in merge.py. This did
  not affect wheels.

1.2.5 (2021-06-21)
------------------

- Change rio-warp to unrotate imagery by default to match gdalwarp (#2125).
- Internal to write() cast int8 arrays to uint8 (#2180).
- Get correct nodata values for complex_int16 data (#2206).
- Prevent merge failures due to window and slicing mismatches (#2204 and
  #2202).

1.2.4 (2021-05-31)
------------------

- Eliminate unneeded marker for CLI nodata options to be ignored. We will stick
  with None (#2191).
- Guard against use of gauss resampling when creating a WarpedVRT (#2190).
- Prevent segfaults when buffer and band indexes are mismatched in
  io_multi_band and io_multi_mask (#2189).
- Change comparisons of nodata to IgnoreOption to accomodate changes in click
  8.0.
- Use Window constructor instead of from_slices in windows.union to allow a
  proper union to be formed from windows extending outside a dataset (#2186).
- Read GDAL CInt16 data as np.complex64 and allow saving complex data to CInt16
  (#2185).
- Skip merge sources which do not overlap the destination.
- Allow unsafe casting in the merge tool, restoring behavior of version 1.2.0
  (#2179).
- Remove a workaround for an old Python 3.4 bug from the BoundingBox
  implementation (#2172).
- Add setuptools as an explicit installation requirement.

1.2.3 (2021-04-26)
------------------
